--- a/src/views/mixins/_storeCard.pug
+++ b/src/views/mixins/_storeCard.pug
@@ -3,8 +3,9 @@ mixin storeCard(store = {})
   .store
     .store__hero
       .store__actions
-        //- TODO : Create the actions to edit, review and share a store
-        button soon
+        .store__action.store__action--edit
+          a(href=`/stores/${store._id}/edit`)
+            != h.icon('pencil')
       img(src=`/uploads/${store.photo || 'store.png'}`)
       h2.title
         a(href=`/store/${store.slug}`) #{store.name}
